# helltime

./: .gitignore  Build-Tauri.bat  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  ErrorBoundary.tsx  OverlayWindow.tsx  OverviewOverlay.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  overlay.rs
src-tauri/src/overlay/: win32.rs
src/lib/: external.ts  helltides.ts  helpers.ts  notify.ts  overlay.ts  overlay_diag.ts  overlay_window.ts  overview_window.ts  safety.ts  settings.ts  sound.ts  speech.ts  storage.ts  time.ts  types.ts  window_state.ts
